# rust-range-check

./: .travis.yml  Cargo.toml  README.md
src/: bounds.rs  check.rs  lib.rs  result.rs
tests/: various_bounds.rs
