[package]
name = "range_check"
description = "Rust library with bounds-checking and range helpers."

authors = [ "ogham@bsago.me" ]
documentation = "https://docs.rs/range_check"
homepage = "https://github.com/ogham/rust-range-check"
license = "MIT"
readme = "README.md"
version = "0.1.0"

[dependencies]
